EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==08/17/2012==
Kayen: Taunt skill updated to work consistent with live.
  *You can now taunt NPC's over the users level. (RULE: TauntOverLevel)
  *Taunt success chance should be accurate to live. Penalty of not being at max skill lv can be adjusted with (RULE: Combat:TauntSkillFalloff)
  *Live messages for taunt success and failure are now implemented. (Note: Only NPC races that can 'talk' will say the success message).
Bad_Captain: Bots- Fixed an issue when with bot spell timers that could lead to a crash.
Kayen: Fixed SQL files from rev2185+ that were not saved as .sql 

OPTIONAL SQL: utils/sql/svn/2189_optional_taunt_rules 
OPTIONAL SQL: utils/sql/svn/2185_optional_NPCFlurryChance_rule (run this again)
  
==08/16/2012==
Kayen: Complete revision of the Death Save and Divine Save effects and related bonuses to be consistent with live.
  *Death Save (Death Pact/DI) will no longer fire on death. It should only fire when less 15% HP but not killed.
  *Death Save chance is determined soley by charisma of client with the buff. (RULE: DeathSaveCharismaMod)
  *Divine Intervention baseline is now correctly set to 8000HP (from 50k) (RULE: DivineInterventionHeal)
  *AA Touch of the Divine provides upon failure of first Death Save, a second roll and if successful will
   do a portion of the original heal value. (Ie DI=8000HP with ToTD-3(60%) your heal will be 8000*0.6 = 4800HP)
  *Implemented functionality for later expansion Death Save effects (Divine Intercession ect)
   These can add heal value to the base heal which is limited by level (ie Heal 10,0000+8000 if client less then level 80)
   
  *Divine Save (AA Unfailing Divinity) only fire upon death of client with this effect and is independent of Death Save effect.
  *Increased ranks of AA only increase the chance of firing upon death. Heal value does NOT increase with rank.